gcc/testsuite/rust/rustc/ui/error-codes/E0268.rs
fn main() {
    break; // { dg-error ".E0268." "" { target *-*-* } }
}

